<resources>
    <string name="app_name">Gürsan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Ana Sayfa</string>
    <string name="nav_is_emri_olustur">İş Emri Oluştur</string>
    <string name="nav_gelen_is_emri">Gelen İş Emirleri</string>
    <string name="nav_notifications">Bildirimler</string>
    <string name="nav_settings">QR Kod Okuyucu</string>
    <string name="nav_about_us">Hakkında</string>
    <string name="nav_iletisim">İletişim</string>
    <string name="nav_cikis">Çıkış</string>
    <string name="nav_diger_ayarlar">Diğer Seçenekler</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Ana Sayfa</item>
        <item>İş Emri Oluştur</item>
        <item>Gelen İş Emirleri</item>
        <item>Bildirimler</item>
        <item>İletişim</item>
    </string-array>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="bottom_nav_item">
        <item> </item>
        <item> </item>
        <item> </item>
    </string-array>

    <string name="activity_title_about_us">Hakkında</string>
    <string name="activity_title_privacy_policy">Gizlilik</string>
    <string name="action_clear_all">Temizle</string>
    <string name="action_logout">Çıkış</string>
    <string name="action_mark_all_read">Okundu</string>
    <string name="privacy_policy">Gizlilik</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Merhaba....</string>
    <string name="translation">Dil:</string>
    <string name="turkce">Türkçe</string>
    <string name="ingilizce">İngilizce</string>

    <!-- Giriş Ekranı -->
    <string name="app_login_ekrani">Giriş</string>
    <string name="kullanici">Kullanıcı Adı</string>
    <string name="parola">Şifre</string>
    <string name="giris">Giriş Yap</string>
    <string name="kullanici_hatirla">Beni Hatırla</string>
    <string name="bilgiler_eksik">Bilgileriniz Eksik!!</string>
    <string name="uygulama_cikis">Uygulama Çıkışı</string>
    <string name="hesap_degistir">Çıkış Yaparak Kullanıcı Hesabınızı Değiştirebilirsiniz</string>
    <string name="iptal">İptal</string>
    <string name="hesap_cikis">Çıkış Yap</string>
    <string name="connection">İnternet Bağlantınızı Kontrol Ediniz!!</string>
    <string name="user_info_error">Kullanıcı Bilgisi Hatası!!</string>
    <string name="user_autorization">Kullanıcı Yetki Hatası!!</string>

    <!--Sweet Alert Dil Seçeneği Text'leri -->
    <string name="dil_secenegi">Dil Seçeneği</string>
    <string name="dil_msj_title">Uygulamanızın dilini </string>
    <string name="dil_msj_title1">olarak değiştirmek ister misiniz?</string>
    <string name="sweet_cevap1">Evet</string>
    <string name="sweet_cevap2">Hayır</string>
    <string name="secilmis_dil">Uygulama dili zaten Türkçe</string>

    <!-- İş Emri -->
    <string name="action_isemri">Gönder</string>

    <!--Navigation View Item in HomePage-->
    <string name="app_name_navi">Bottom Navigation</string>
    <string name="title_tumu">Tümü</string>
    <string name="title_acil">Açık</string>
    <string name="title_yildizli">Kapalı</string>
    <string name="title_zamanli">Zamanlı</string>
    <string name="bildirim_silme">Bildirim Silme</string>
    <string name="bildirim_icerik">Bildirimlerinizin tümünü silmek istediğinize emin misiniz?</string>
    <string name="bildirim_silme_cancel">İptal</string>
    <string name="bildirim_silme_onay">Evet</string>

    <string name="msj_status_order">Liste Boş</string>
    <string name="address">İnönü Caddesi Marmara Apt. 45/4 Gümüşsuyu, Taksim, Beyoglu 34437 İSTANBUL</string>
    <string name="tel">+90 (212) 292 57 50 PBX</string>
    <string name="faks">+90 (212) 292 57 51</string>
    <string name="mail">gursan@gursanteknik.com</string>

    <string-array name="sports_array">


        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>Table Tennis</item>
        <item>Basket Ball</item>
        <item>Foot Ball</item>
        <item>Volley Ball</item>
        <item>Hockey</item>
        <item>Swimming</item>

        <item>Shuttle Badminton 2</item>
        <item>Tennis 2</item>
        <item>Table Tennis 2</item>
        <item>Basket Ball 2</item>
        <item>Foot Ball 2</item>
        <item>Volley Ball 2</item>
        <item>Hockey 2</item>
        <item>Swimming 2</item>

        <item>Shuttle Badminton 3</item>
        <item>Tennis 3</item>
        <item>Table Tennis 3</item>
        <item>Basket Ball 3</item>
        <item>Foot Ball 3</item>
        <item>Volley Ball 3</item>
        <item>Hockey 3</item>
        <item>Swimming 3</item>

        <item>Shuttle Badminton 4</item>
        <item>Tennis 4</item>
        <item>Table Tennis 4</item>
        <item>Basket Ball 4</item>
        <item>Foot Ball 4</item>
        <item>Volley Ball 4</item>
        <item>Hockey 4</item>
        <item>Swimming 4</item>

        <item>Shuttle Badminton 5</item>
        <item>Tennis 5</item>
        <item>Table Tennis 5</item>
        <item>Basket Ball 5</item>
        <item>Foot Ball 5</item>
        <item>Volley Ball 5</item>
        <item>Hockey 5</item>
        <item>Swimming 5</item>
    </string-array>

    <string-array name="types">
        <item>Mobile</item>
        <item>Office</item>
        <item>Home</item>
    </string-array>


</resources>
